--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,364 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/foreword.xhtml">Note</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Pelle the Conqueror</a>
+					<ol>
+						<li>
+							<a href="text/part-1.xhtml">Book <span epub:type="z3998:roman">I</span>: Boyhood</a>
+							<ol>
+								<li>
+									<a href="text/chapter-1-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-7.xhtml" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-8.xhtml" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-9.xhtml" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-10.xhtml" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-11.xhtml" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-12.xhtml" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-13.xhtml" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-14.xhtml" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-15.xhtml" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-16.xhtml" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-17.xhtml" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-18.xhtml" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-19.xhtml" epub:type="z3998:roman">XIX</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-20.xhtml" epub:type="z3998:roman">XX</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-21.xhtml" epub:type="z3998:roman">XXI</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-22.xhtml" epub:type="z3998:roman">XXII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-23.xhtml" epub:type="z3998:roman">XXIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-24.xhtml" epub:type="z3998:roman">XXIV</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-2.xhtml">Book <span epub:type="z3998:roman">II</span>: Apprenticeship</a>
+							<ol>
+								<li>
+									<a href="text/chapter-2-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-7.xhtml" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-8.xhtml" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-9.xhtml" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-10.xhtml" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-11.xhtml" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-12.xhtml" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-13.xhtml" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-14.xhtml" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-15.xhtml" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-16.xhtml" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-17.xhtml" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-18.xhtml" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-19.xhtml" epub:type="z3998:roman">XIX</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-20.xhtml" epub:type="z3998:roman">XX</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-21.xhtml" epub:type="z3998:roman">XXI</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-22.xhtml" epub:type="z3998:roman">XXII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-23.xhtml" epub:type="z3998:roman">XXIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-24.xhtml" epub:type="z3998:roman">XXIV</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-25.xhtml" epub:type="z3998:roman">XXV</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-26.xhtml" epub:type="z3998:roman">XXVI</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-3.xhtml">Book <span epub:type="z3998:roman">III</span>: The Great Struggle</a>
+							<ol>
+								<li>
+									<a href="text/chapter-3-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-7.xhtml" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-8.xhtml" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-9.xhtml" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-10.xhtml" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-11.xhtml" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-12.xhtml" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-13.xhtml" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-14.xhtml" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-15.xhtml" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-16.xhtml" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-17.xhtml" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-18.xhtml" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-19.xhtml" epub:type="z3998:roman">XIX</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-20.xhtml" epub:type="z3998:roman">XX</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-21.xhtml" epub:type="z3998:roman">XXI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-22.xhtml" epub:type="z3998:roman">XXII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-23.xhtml" epub:type="z3998:roman">XXIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-24.xhtml" epub:type="z3998:roman">XXIV</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-25.xhtml" epub:type="z3998:roman">XXV</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-26.xhtml" epub:type="z3998:roman">XXVI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-27.xhtml" epub:type="z3998:roman">XXVII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-28.xhtml" epub:type="z3998:roman">XXVIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-29.xhtml" epub:type="z3998:roman">XXIX</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-30.xhtml" epub:type="z3998:roman">XXX</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-31.xhtml" epub:type="z3998:roman">XXXI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-32.xhtml" epub:type="z3998:roman">XXXII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-33.xhtml" epub:type="z3998:roman">XXXIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-34.xhtml">
+										<span epub:type="z3998:roman">XXXIV.</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-35.xhtml" epub:type="z3998:roman">XXXV</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-36.xhtml" epub:type="z3998:roman">XXXVI</a>
+								</li>
+								<li>
+									<a href="text/chapter-3-37.xhtml" epub:type="z3998:roman">XXXVII</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-4.xhtml">Book <span epub:type="z3998:roman">IV</span>: Daybreak</a>
+							<ol>
+								<li>
+									<a href="text/chapter-4-1.xhtml" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-2.xhtml" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-3.xhtml" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-4.xhtml" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-5.xhtml" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-6.xhtml" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-7.xhtml" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-8.xhtml" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-9.xhtml" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-10.xhtml" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-11.xhtml" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-12.xhtml" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-13.xhtml" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-14.xhtml" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-15.xhtml" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-16.xhtml" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-17.xhtml" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-18.xhtml" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-19.xhtml" epub:type="z3998:roman">XIX</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-20.xhtml" epub:type="z3998:roman">XX</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-21.xhtml" epub:type="z3998:roman">XXI</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-22.xhtml" epub:type="z3998:roman">XXII</a>
+								</li>
+								<li>
+									<a href="text/chapter-4-23.xhtml" epub:type="z3998:roman">XXIII</a>
+								</li>
+							</ol>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +391,13 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/foreword.xhtml" epub:type="frontmatter foreword">Note</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
+					<a href="text/part-1.xhtml" epub:type="bodymatter z3998:fiction">Pelle the Conqueror</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
