--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -374,6 +374,9 @@
 					</ol>
 				</li>
 				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
+				</li>
+				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
 				<li>
@@ -398,6 +401,9 @@
 				</li>
 				<li>
 					<a href="text/part-1.xhtml" epub:type="bodymatter z3998:fiction">Pelle the Conqueror</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
