Fill out more metadata

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,9 +19,9 @@
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://www.robinwhittleton.com">Robin Whittleton</a>,<br/>
 			and is based on a transcription produced in 2005 by<br/>
-			<b class="name">TRANSCRIBER_1</b>, <b class="name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b class="name">Eric Eldred</b>, <b class="name">Earle Beach</b>, <b class="name">Jerry Fairbanks</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<b class="name">Project Gutenberg</b> (books <a href="https://www.gutenberg.org/ebooks/7791">1</a>, <a href="https://www.gutenberg.org/ebooks/7792">2</a>, <a href="https://www.gutenberg.org/ebooks/7793">3</a> and <a href="https://www.gutenberg.org/ebooks/7794">4</a>)<br/>
 			and on digital scans available at the<br/>
