Fix linting errors
- Sentence alignment in letters
- Mistranscriptions
- Miscurled quotes
- Other minor things

--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of Pelle the Conqueror, by Martin Andersen Nexø. Translated by Jessie Muir" src="../images/titlepage.svg" epub:type="se:color-depth.black-on-transparent"/>
+			<img alt="The titlepage for the Standard Ebooks edition of Pelle the Conqueror, by Martin Andersen Nexø. Translated by Jessie Muir and Bernard Miall" src="../images/titlepage.svg" epub:type="se:color-depth.black-on-transparent"/>
 		</section>
 	</body>
 </html>
