--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -282,9 +282,7 @@
 									<a href="text/chapter-3-33.xhtml" epub:type="z3998:roman">XXXIII</a>
 								</li>
 								<li>
-									<a href="text/chapter-3-34.xhtml">
-										<span epub:type="z3998:roman">XXXIV</span>
-									</a>
+									<a href="text/chapter-3-34.xhtml" epub:type="z3998:roman">XXXIV</a>
 								</li>
 								<li>
 									<a href="text/chapter-3-35.xhtml" epub:type="z3998:roman">XXXV</a>
