--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -27,9 +27,9 @@
 			and on digital scans available at the<br/>
 			<b class="name">Internet Archive</b> (books <a href="https://archive.org/details/in.ernet.dli.2015.4088">1</a>, <a href="https://archive.org/details/cu31924026295414">2</a>, <a href="https://archive.org/details/pelleconqueror00muirgoog">3 and 4</a>).</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Self-Portrait</i>,<br/>
+			a painting completed in 1885 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Paul_Gauguin">Paul Gauguin</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
