Proofing fix for part 2 chapter 3
- Move note to endnote

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -19,10 +19,13 @@
 					<p>An ordinary expression in Danish for a mean, deceitful person. <a href="chapter-1-20.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p>The 11th December⁠—the general payday and hiring-day. <a href="chapter-2-11.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>Bornholm. <a href="chapter-2-3.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
-					<p>The king was so called. <a href="chapter-3-37.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+					<p>The 11th December⁠—the general payday and hiring-day. <a href="chapter-2-11.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-6" epub:type="endnote">
+					<p>The king was so called. <a href="chapter-3-37.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
