--- a/src/epub/text/imprint.xhtml
+++ b/src/epub/text/imprint.xhtml
@@ -9,7 +9,7 @@
 		<section id="imprint" epub:type="imprint">
 			<header>
 				<h2 epub:type="title">Imprint</h2>
-				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
+				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p>This ebook is the product of many hours of hard work by volunteers for <a href="https://standardebooks.org">Standard Ebooks</a>, and builds on the hard work of other literature lovers made possible by the public domain.</p>
 			<p>This particular ebook is based on a transcription produced for Project Gutenberg (books <a href="https://www.gutenberg.org/ebooks/7791">1</a>, <a href="https://www.gutenberg.org/ebooks/7792">2</a>, <a href="https://www.gutenberg.org/ebooks/7793">3</a> and <a href="https://www.gutenberg.org/ebooks/7794">4</a>) and on digital scans available at the Internet Archive (books <a href="https://archive.org/details/in.ernet.dli.2015.4088">1</a>, <a href="https://archive.org/details/cu31924026295414">2</a>, <a href="https://archive.org/details/pelleconqueror00muirgoog">3 and 4</a>).</p>
