--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,17 +15,17 @@
 			was published between 1906 and 1910 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Martin_Andersen_Nex%C3%B8">Martin Andersen Nexø</a>.<br/>
 			It was translated from Danish between 1913 and 1916 by<br/>
-			<b class="name">Jessie Muir</b> and <b class="name">Bernard Miall</b>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<b epub:type="z3998:personal-name">Jessie Muir</b> and <b epub:type="z3998:personal-name">Bernard Miall</b>.</p>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://www.robinwhittleton.com">Robin Whittleton</a>,<br/>
 			and is based on a transcription produced in 2005 by<br/>
-			<b class="name">Eric Eldred</b>, <b class="name">Earle Beach</b>, <b class="name">Jerry Fairbanks</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Eric Eldred</b>, <b epub:type="z3998:personal-name">Earle Beach</b>, <b epub:type="z3998:personal-name">Jerry Fairbanks</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
-			<b class="name">Project Gutenberg</b> (books <a href="https://www.gutenberg.org/ebooks/7791">1</a>, <a href="https://www.gutenberg.org/ebooks/7792">2</a>, <a href="https://www.gutenberg.org/ebooks/7793">3</a> and <a href="https://www.gutenberg.org/ebooks/7794">4</a>)<br/>
+			<b epub:type="z3998:organization">Project Gutenberg</b> (books <a href="https://www.gutenberg.org/ebooks/7791">1</a>, <a href="https://www.gutenberg.org/ebooks/7792">2</a>, <a href="https://www.gutenberg.org/ebooks/7793">3</a> and <a href="https://www.gutenberg.org/ebooks/7794">4</a>)<br/>
 			and on digital scans available at the<br/>
-			<b class="name">Internet Archive</b> (books <a href="https://archive.org/details/in.ernet.dli.2015.4088">1</a>, <a href="https://archive.org/details/cu31924026295414">2</a>, <a href="https://archive.org/details/pelleconqueror00muirgoog">3 and 4</a>).</p>
+			<b epub:typpe="z3998:organization">Internet Archive</b> (books <a href="https://archive.org/details/in.ernet.dli.2015.4088">1</a>, <a href="https://archive.org/details/cu31924026295414">2</a>, <a href="https://archive.org/details/pelleconqueror00muirgoog">3</a> and <a href="https://archive.org/details/pelleconqueror00muirgoog">4</a>).</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Self-Portrait</i>,<br/>
 			a painting completed in 1885 by<br/>
@@ -35,7 +35,7 @@
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
-			<b>January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></b><br/>
+			<b>January 1, 1900, 12:00 <abbr class="eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall">standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
