Finish metadata and initial publication

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,7 +25,7 @@
 			for<br/>
 			<b epub:type="z3998:organization">Project Gutenberg</b> (books <a href="https://www.gutenberg.org/ebooks/7791">1</a>, <a href="https://www.gutenberg.org/ebooks/7792">2</a>, <a href="https://www.gutenberg.org/ebooks/7793">3</a> and <a href="https://www.gutenberg.org/ebooks/7794">4</a>)<br/>
 			and on digital scans available at the<br/>
-			<b epub:typpe="z3998:organization">Internet Archive</b> (books <a href="https://archive.org/details/in.ernet.dli.2015.4088">1</a>, <a href="https://archive.org/details/cu31924026295414">2</a>, <a href="https://archive.org/details/pelleconqueror00muirgoog">3</a> and <a href="https://archive.org/details/pelleconqueror00muirgoog">4</a>).</p>
+			<b epub:type="z3998:organization">Internet Archive</b> (books <a href="https://archive.org/details/in.ernet.dli.2015.4088">1</a>, <a href="https://archive.org/details/cu31924026295414">2</a>, <a href="https://archive.org/details/pelleconqueror00muirgoog">3</a> and <a href="https://archive.org/details/pelleconqueror00muirgoog">4</a>).</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Self-Portrait</i>,<br/>
 			a painting completed in 1885 by<br/>
@@ -35,7 +35,7 @@
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
-			<b>January 1, 1900, 12:00 <abbr class="eoc">a.m.</abbr></b><br/>
+			<b>July 7, 2021, 10:51 <abbr class="eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall">standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
