--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,10 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of Pelle the Conqueror, by Martin Andersen Nexø. Translated by Jessie Muir and Bernard Miall" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
+			<h1 epub:type="title">Pelle the Conqueror</h1>
+			<p>By <b epub:type="z3998:personal-name z3998:author">Martin Andersen Nexø</b>.</p>
+			<p>Translated by <b epub:type="z3998:personal-name z3998:translator">Jessie Muir</b> and <b epub:type="z3998:personal-name z3998:translator">Bernard Miall</b>.</p>
+			<img alt="" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
 		</section>
 	</body>
 </html>
