--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -386,28 +386,10 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/foreword.xhtml" epub:type="frontmatter foreword">Note</a>
-				</li>
-				<li>
-					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
-				</li>
-				<li>
-					<a href="text/part-1.xhtml" epub:type="bodymatter z3998:fiction">Pelle the Conqueror</a>
+					<a href="text/part-1.xhtml" epub:type="bodymatter">Pelle the Conqueror</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
 				</li>
 			</ol>
 		</nav>
