Update imprint and colophon to account for multiple transcription/scan sources

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -20,12 +20,12 @@
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://www.robinwhittleton.com">Robin Whittleton</a>,<br/>
-			and is based on a transcription produced in 2005 by<br/>
+			and is based on transcriptions produced in 2005 by<br/>
 			<b epub:type="z3998:personal-name">Eric Eldred</b>, <b epub:type="z3998:personal-name">Earle Beach</b>, <b epub:type="z3998:personal-name">Jerry Fairbanks</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
-			<b epub:type="z3998:organization">Project Gutenberg</b> (books <a href="https://www.gutenberg.org/ebooks/7791">1</a>, <a href="https://www.gutenberg.org/ebooks/7792">2</a>, <a href="https://www.gutenberg.org/ebooks/7793">3</a> and <a href="https://www.gutenberg.org/ebooks/7794">4</a>)<br/>
+			<a href="https://standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall#transcriptions">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<b epub:type="z3998:organization">Internet Archive</b> (books <a href="https://archive.org/details/in.ernet.dli.2015.4088">1</a>, <a href="https://archive.org/details/cu31924026295414">2</a>, <a href="https://archive.org/details/pelleconqueror00muirgoog">3</a> and <a href="https://archive.org/details/pelleconqueror00muirgoog">4</a>).</p>
+			<a href="https://standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall#page-scans">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Self-Portrait</i>,<br/>
 			a painting completed in 1885 by<br/>
