--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -24,7 +24,7 @@
 			<b epub:type="z3998:personal-name">Eric Eldred</b>, <b epub:type="z3998:personal-name">Earle Beach</b>, <b epub:type="z3998:personal-name">Jerry Fairbanks</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall#transcriptions">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans from the<br/>
 			<a href="https://standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall#page-scans">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Self-Portrait</i>,<br/>
