--- a/src/epub/text/part-4.xhtml
+++ b/src/epub/text/part-4.xhtml
@@ -12,7 +12,7 @@
 					<span epub:type="label">Book</span>
 					<span epub:type="ordinal z3998:roman">IV</span>
 				</h2>
-				<h3 epub:type="title">Daybreak</h3>
+				<p epub:type="title">Daybreak</p>
 			</hgroup>
 		</section>
 	</body>
