--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			by<br/>
 			<a href="https://www.robinwhittleton.com">Robin Whittleton</a>,<br/>
 			and is based on transcriptions produced in 2005 by<br/>
-			<b epub:type="z3998:personal-name">Eric Eldred</b>, <b epub:type="z3998:personal-name">Earle Beach</b>, <b epub:type="z3998:personal-name">Jerry Fairbanks</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Eric Eldred</b>, <b epub:type="z3998:personal-name">Earle Beach</b>, <b epub:type="z3998:personal-name">Jerry Fairbanks</b>, and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://standardebooks.org/ebooks/martin-andersen-nexo/pelle-the-conqueror/jessie-muir_bernard-miall#transcriptions">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
